Fix build issues and update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ replay_pid*
 # End of https://www.toptal.com/developers/gitignore/api/java
 
 *.iml
-.idea/*
-.vscode/*
-.gradle/*
+.idea
+.vscode
+.gradle
+build
