refactor project to separate frontend and backend code. Rewrite instance method on warehouse so that it does not always retrieve data.

--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,13 @@ dependencies {
 }
 
 application {
-    mainClassName = 'UserInterface'
+    mainClassName = 'frontend.FrontendMain'
 }
 
 jar {
     manifest {
         attributes(
-                'Main-Class': 'UserInterface'
+                'Main-Class': 'frontend.UserInterface'
         )
     }
 }
